--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
 RewriteEngine On
 RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /(.*)index\.php($|\ |\?)
 RewriteRule ^ /%1 [R=301,L]
+ErrorDocument 404 http://localhost/banquanao/?404
